@@ -1,0 +1,49 @@
+///////////////////////////////
+//  Makumba, Makumba tag library
+//  Copyright (C) 2000-2003  http://www.makumba.org
+//
+//  This library is free software; you can redistribute it and/or
+//  modify it under the terms of the GNU Lesser General Public
+//  License as published by the Free Software Foundation; either
+//  version 2.1 of the License, or (at your option) any later version.
+//
+//  This library is distributed in the hope that it will be useful,
+//  but WITHOUT ANY WARRANTY; without even the implied warranty of
+//  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+//  Lesser General Public License for more details.
+//
+//  You should have received a copy of the GNU Lesser General Public
+//  License along with this library; if not, write to the Free Software
+//  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+//
+//  -------------
+//  $Id$
+//  $Name$
+/////////////////////////////////////
+
+package org.makumba.db.sql;
+import java.sql.*;
+import java.io.*;
+import org.makumba.*;
+
+/** this deals with SQL double precision numeric fields */
+public class realManager extends FieldManager
+{
+  
+  protected int getSQLType()
+  {
+    return java.sql.Types.DOUBLE;
+  }
+
+  /** Use standard SQL name, unless defined otherwise in sqlEngines.properties. */
+  protected String getDBType()
+  {
+    String s=super.getDBType();
+    if(s==null)
+      return "DOUBLE PRECISION"; //standard name
+    else
+      return s;
+  }
+
+
+}
