@@ -43,7 +43,6 @@ cloudscape.dbclass=org.makumba.db.sql.cloudscape.Database
 qed=com.quadcap.jdbc.JdbcDriver
 qed.localJDBC=true
 qed.dbclass=org.makumba.db.sql.qed.Database
-qed.real=DOUBLE PRECISION
 
 dbcp=COM.FirstSQL.Dbcp.DbcpDriver
 dbcp.dbclass=org.makumba.db.sql.dbcp.Database
@@ -52,4 +51,3 @@ informix-sqli=com.informix.jdbc.IfxDriver
 informix-sqli.tableclass=org.makumba.db.sql.informix.RecordManager
 informix-sqli.tableMissing=42000
 informix-sqli.duplicateEntry=2300
-informix-sqli.real=DOUBLE PRECISION
