@@ -1,6 +1,7 @@
 char=Field
 text=Field
 int=Field
+real=Field
 charEnum=Field
 
 #date=Field
